html/tests/html-tag-fail.stderr
error: this open tag has no corresponding close tag
 --> $DIR/html-tag-fail.rs:5:9
  |
5 |         <div>
  |         ^^^^^

error: this open tag has no corresponding close tag
 --> $DIR/html-tag-fail.rs:9:9
  |
9 |         <div><div>
  |         ^^^^^

error: this close tag has no corresponding open tag
  --> $DIR/html-tag-fail.rs:13:9
   |
13 |         </div>
   |         ^^^^^^

error: this open tag has no corresponding close tag
  --> $DIR/html-tag-fail.rs:17:9
   |
17 |         <div><div></div>
   |         ^^^^^

error: only one root html element allowed
  --> $DIR/html-tag-fail.rs:20:5
   |
20 | /     html! {
21 | |         <div></div>
22 | |         <div></div>
23 | |     };
   | |______^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: this open tag has no corresponding close tag
  --> $DIR/html-tag-fail.rs:26:9
   |
26 |         <div></span>
   |         ^^^^^

error: only one root html element allowed
  --> $DIR/html-tag-fail.rs:29:5
   |
29 | /     html! {
30 | |         <img /></img>
31 | |     };
   | |______^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: expected valid html element
  --> $DIR/html-tag-fail.rs:34:14
   |
34 |         <div>Invalid</div>
   |              ^^^^^^^

error: this close tag has no corresponding open tag
  --> $DIR/html-tag-fail.rs:38:14
   |
38 |         <div></span></div>
   |              ^^^^^^^
